# QuetzalPIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  containers.h  containers_2d.h  containers_3d.h  quasistatic_pic.cpp  quasistatic_pic_2d.cpp  quasistatic_pic_3d.cpp  run.sh  space2d.cpp  space2d.h  test_1d_fourier.cpp  test_2d_fourier.cpp
include/: System_3d.h  System_parameters.h  containers_3d.h
inputs/test/: betatron_oscillations.toml  bunch_test.toml  laser_test.toml  linear_wake_test.toml  profile_test.toml
notebooks/: .gitignore  Test.ipynb  Test3D.ipynb
src/: Config_reader.cpp  Config_reader.h  Fourier2d.cpp  Fourier2d.h  Output_writer.cpp  Output_writer.h  Plasma_units.h  Species_register.cpp  Species_register.h  System_3d.cpp  System_3d.h  System_parameters.h  array1d.cpp  array1d.h  array2d.cpp  array2d.h  array3d.h  array_utils.cpp  array_utils.h  constants.h  containers.cpp  containers.h  containers_3d.cpp  containers_3d.h  monte_carlo.cpp  monte_carlo.h  output.cpp  output.h  profiles.cpp  profiles.h  quasistatic_pic.cpp  quasistatic_pic_3d.cpp
utils/: reader.py
